Fixing Android call and annotations toolbars

--- a/android/OneToOneScreenSharingSample/app/src/main/res/values/strings.xml
+++ b/android/OneToOneScreenSharingSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Sample app</string>
     <string name="network_quality">Network connection is unstable.</string>
+    <string name="permissions_denied_title">Permissions Denied</string>
+    <string name="permissions_denied">Cannot use this app without requested permission. Please, grant permissions</string>
+    <string name="alert_permissions_denied">Without these permissions the app is unable to make call or to share the screen. Are you sure you want to deny these permissions?</string>
 </resources>
